# voacapl

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.md  INSTALL  LICENSE  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  makeitshfbc
debian/: copyright
man/: dst2ascii.1  dst2csv.1  makeitshfbc.1  voacapl.1
src/hfmufesw/: Makefile.am  Makefile.in  agauss.f  agauss.for  cang.f  cang.for  cmpinv.f  cmpinv.for  coll.f  coll.for  csz1.f  csz1.for  ech.f  ech.for  matinv.f  matinv.for  mufesgan.f  mufesgan.for  mufesint.f  mufesint.for  mutual.f  mutual.for  onej.f  onej.for  react.f  react.for  resist.f  resist.for  sim.f  sim.for  sqmult.f  sqmult.for  zmut.f  zmut.for
src/modules/: Makefile.am  Makefile.in  crun_directory.f95  cversn.f95  distance_defs.f95  error_codes.f  voacapl_defs.for
src/rec533/: Makefile.am  absorp.for  acos.for  anois1.for  antcalc.for  antcalz.for  antciraf.for  areamap.for  batch.for  bear.for  best3.for  bestf.for  blkdat.for  calc_bcr.for  cancel.for  char4  class.for  class1.for  contat.for  contp.for  cords.for  curmuf.for  dazel1.for  dbu252.for  decred.for  del_abt.for  distxy.for  evlgog.for  evltim.for  f777.for  fad842.for  fof2var.for  fop.for  ftz.for  genfam.for  genois1.for  geom.for  gridxy.for  harris.for  kormu.for  (+33 more)
src/voa_lib/: Makefile.am  Makefile.in  chardeg.f  chardeg.for  col_dos.f  col_dos.for  dazel1.f  dazel1.for  deg2chr.f  deg2chr.for  doscolr.f  doscolr.for  gh_exec.for  icoldos.f  icoldos.for  it_exist.for  lcase.for  lcount.f  lcount.for  lenchar.f  lenchar.for  pwrcut.f  pwrcut.for  rblankc.f  rblankc.for  set_run.f  set_run.for  suffix.f  suffix.for  ucase.for  wincolr.f  wincolr.for  yieldit.for
src/voacapw/: Makefile.am  Makefile.in  allmodes.f  allmodes.for  alosfv.f  alosfv.for  anois1.f  anois1.for  antcalc.f  antcalc.for  areamap.F  areamap.for  areamapx.for  babs.f  babs.for  batch.f  batch.for  batch_s.f  batch_s.for  bendy.f  bendy.for  blkdat.f  blkdat.for  cancel.f  circant.f  circant.for  cisi.for  cngtim.f  cngtim.for  convh.f  convh.for  curmuf.f  curmuf.for  dazel.f  dazel.for  decred.f  decred.for  del_abt.for  distxy.f  distxy.for  (+187 more)
src/wp10dwin/: Makefile.am  Makefile.in  antcal.f  antcal.for  antfile.f  antfile.for  antinit2.f  antinit2.for  antmodel.f  antmodel.for  azmax.f  azmax.for  bessel.f  bessel.for  ccirgain.f  ccirgain.for  cisi.f  cisi.for  curcal.f  curcal.for  curnorm.for  curtain.f  curtain.for  dazel0.f  dazel0.for  dbltrap.f  dbltrap.for  dirgain.for  f2.f  f2.for  file_nam.for  gainorm.f  gainorm.for  gainrel.f  gainrel.for  gainterb.f  gainterb.for  gainterp.f  gainterp.for  getantyp.for  (+28 more)
tests/p2p/: test01.out
tests/rec533/: rec533x.out
voacapl/itshfbc/antennas/default/: ccir.001  ccir.002  ccir.003  ccir.004  ccir.005  ccir.006  ccir.007  ccir.008  ccir.009  ccir.010  ccir.011  ccir.012  ccir.013  ccir.014  ccir.015  ccir.016  ccir.017  ccir.018  ccir.019  ccir.020  ccir.021  ccir.022  ccir.023  ccir.024  ccir.025  ccir.026  const17.voa  isotrope  swwhip.voa
voacapl/itshfbc/antennas/samples/: sample.00  sample.01  sample.02  sample.03  sample.04  sample.05  sample.06  sample.07  sample.08  sample.09  sample.10  sample.11  sample.12  sample.13  sample.14  sample.14x  sample.21  sample.22  sample.23  sample.24  sample.25  sample.26  sample.27  sample.28  sample.29  sample.30  sample.31  sample.32  sample.34  sample.35  sample.36  sample.37  sample.38  sample.39  sample.41  sample.43  sample.44  sample.45  sample.46  sample.47  (+3 more)
voacapl/itshfbc/area_inv/default/: default.ice  default.voa
voacapl/itshfbc/areadata/default/: default.ice  default.rec  default.voa
voacapl/itshfbc/coeffs/: Makefile.am  Makefile.in  coefbinw.f  coeff01.asc  coeff02.asc  coeff03.asc  coeff04.asc  coeff05.asc  coeff06.asc  coeff07.asc  coeff08.asc  coeff09.asc  coeff10.asc  coeff11.asc  coeff12.asc  coeffbin.f  fof2CCIR.asc  fof2URSI.asc  fof2bin.f  fof2binw.f  fof2daly.asc
voacapl/itshfbc/database/: cirafp.911  colors.win  fof2var.txt  north_pole.txt  version.w32  version.win  voacap.def
voacapl/itshfbc/geocity/: africa.geo  caribean.geo  ciraf.geo  dxcc1.geo  europe.geo  fareast.geo  hflist05082006.geo  military.geo  namerica.geo  ncdxf.geo  oceanic.geo  other.geo  palau.geo  samerica.geo  westasia.geo  wrldwide.geo
voacapl/itshfbc/geonatio/: africa.geo  caribean.geo  europe.geo  fareast.geo  hf-list.geo  namerica.geo  samerica.geo  westasia.geo
voacapl/itshfbc/geostate/: alabama.geo  alaska.geo  arizona.geo  arkansas.geo  cali_a-l.geo  cali_m-z.geo  colorado.geo  connecti.geo  dc.geo  delaware.geo  flor_a-l.geo  flor_m-z.geo  georgia.geo  hawaii.geo  idaho.geo  illi_a-l.geo  illi_m-z.geo  indiana.geo  iowa_a-l.geo  iowa_m-z.geo  kansas.geo  kentucky.geo  louisian.geo  maine.geo  maryland.geo  massachu.geo  michigan.geo  minn_a-l.geo  minn_m-z.geo  mississi.geo  mo_a-l.geo  mo_m-z.geo  montana.geo  n_caroli.geo  n_dakota.geo  nebraska.geo  nevada.geo  new_hamp.geo  new_jers.geo  new_mexi.geo  (+22 more)
voacapl/itshfbc/news/: 07_04_13.txt  07_04_15.txt  07_05_13.txt  07_05_17.txt  07_09_03.txt  07_09_16.txt  07_09_21.txt  07_10_25.txt  07_12_28.txt  08_01_03.txt  08_01_21.txt  08_04_10.txt  10_01_23.txt  11_07_14.txt  11_11_28.txt  12_03_26.txt  12_07_08.txt  12_07_09.txt  12_07_22.txt  14_09_05.txt  14_11_14.txt  14_12_31.txt  15_05_06.txt  15_10_21.txt  16_12_07.txt  1993_all.txt  1994_all.txt  1995_all.txt  1996_all.txt  1997_all.txt  1998_all.txt  1999_all.txt  2000_all.txt  2001_all.txt  2002_all.txt  2003_all.txt  2004_all.txt  2005_all.txt  2006_all.txt  2007_all.txt  (+7 more)
voacapl/itshfbc/run/: voaareax.da1  voacap.cir  voacapw.asc  voacapx.out
