#
#  Top Level Makefile for VOACAPL
#

SUBDIRS = src/modules\
	src/hfmufesw\
	src/voa_lib\
	src/wp10dwin\
	src/voacapw\
	src/rec533\
	voacapl/itshfbc/coeffs\
	voacapl/itshfbc/bin/anttyp90 \
	voacapl/itshfbc/bin/anttyp99 \
	voacapl/itshfbc/bin/dst

dist_doc_DATA = README.md\
	NEWS\
	COPYING\
	ChangeLog.md\
	AUTHORS\
	logo.png

nobase_dist_doc_DATA = \
	voacapl/itshfbc/news/07_04_13.txt\
	voacapl/itshfbc/news/07_04_15.txt\
	voacapl/itshfbc/news/07_05_13.txt\
	voacapl/itshfbc/news/07_05_17.txt\
	voacapl/itshfbc/news/07_09_03.txt\
	voacapl/itshfbc/news/07_09_16.txt\
	voacapl/itshfbc/news/07_09_21.txt\
	voacapl/itshfbc/news/07_10_25.txt\
	voacapl/itshfbc/news/07_12_28.txt\
	voacapl/itshfbc/news/08_01_03.txt\
	voacapl/itshfbc/news/08_01_21.txt\
	voacapl/itshfbc/news/08_04_10.txt\
	voacapl/itshfbc/news/10_01_23.txt\
	voacapl/itshfbc/news/11_07_14.txt\
	voacapl/itshfbc/news/11_11_28.txt\
	voacapl/itshfbc/news/12_03_26.txt\
	voacapl/itshfbc/news/12_07_08.txt\
	voacapl/itshfbc/news/12_07_09.txt\
	voacapl/itshfbc/news/12_07_22.txt\
	voacapl/itshfbc/news/14_09_05.txt\
	voacapl/itshfbc/news/14_11_14.txt\
	voacapl/itshfbc/news/14_12_31.txt\
	voacapl/itshfbc/news/15_05_06.txt\
	voacapl/itshfbc/news/15_10_21.txt\
	voacapl/itshfbc/news/16_12_07.txt\
	voacapl/itshfbc/news/1993_all.txt\
	voacapl/itshfbc/news/1994_all.txt\
	voacapl/itshfbc/news/1995_all.txt\
	voacapl/itshfbc/news/1996_all.txt\
	voacapl/itshfbc/news/1997_all.txt\
	voacapl/itshfbc/news/1998_all.txt\
	voacapl/itshfbc/news/1999_all.txt\
	voacapl/itshfbc/news/2000_all.txt\
	voacapl/itshfbc/news/2001_all.txt\
	voacapl/itshfbc/news/2002_all.txt\
	voacapl/itshfbc/news/2003_all.txt\
	voacapl/itshfbc/news/2004_all.txt\
	voacapl/itshfbc/news/2005_all.txt\
	voacapl/itshfbc/news/2006_all.txt\
	voacapl/itshfbc/news/2007_all.txt\
	voacapl/itshfbc/news/2008_all.txt\
	voacapl/itshfbc/news/2009_all.txt\
	voacapl/itshfbc/news/command.txt\
	voacapl/itshfbc/news/config.txt\
	voacapl/itshfbc/news/hf_parse.txt\
	voacapl/itshfbc/news/problems.txt

dist_man_MANS = man/voacapl.1 \
  man/dst2csv.1 \
	man/dst2ascii.1

dist_bin_SCRIPTS = makeitshfbc

nobase_dist_data_DATA = \
	voacapl/itshfbc/antennas/default/ccir.000 \
	voacapl/itshfbc/antennas/default/ccir.001 \
	voacapl/itshfbc/antennas/default/ccir.002 \
	voacapl/itshfbc/antennas/default/ccir.003 \
	voacapl/itshfbc/antennas/default/ccir.004 \
	voacapl/itshfbc/antennas/default/ccir.005 \
	voacapl/itshfbc/antennas/default/ccir.006 \
	voacapl/itshfbc/antennas/default/ccir.007 \
	voacapl/itshfbc/antennas/default/ccir.008 \
	voacapl/itshfbc/antennas/default/ccir.009 \
	voacapl/itshfbc/antennas/default/ccir.010 \
	voacapl/itshfbc/antennas/default/ccir.011 \
	voacapl/itshfbc/antennas/default/ccir.012 \
	voacapl/itshfbc/antennas/default/ccir.013 \
	voacapl/itshfbc/antennas/default/ccir.014 \
	voacapl/itshfbc/antennas/default/ccir.015 \
	voacapl/itshfbc/antennas/default/ccir.016 \
	voacapl/itshfbc/antennas/default/ccir.017 \
	voacapl/itshfbc/antennas/default/ccir.018 \
	voacapl/itshfbc/antennas/default/ccir.019 \
	voacapl/itshfbc/antennas/default/ccir.020 \
	voacapl/itshfbc/antennas/default/ccir.021 \
	voacapl/itshfbc/antennas/default/ccir.022 \
	voacapl/itshfbc/antennas/default/ccir.023 \
	voacapl/itshfbc/antennas/default/ccir.024 \
	voacapl/itshfbc/antennas/default/ccir.025 \
	voacapl/itshfbc/antennas/default/ccir.026 \
	voacapl/itshfbc/antennas/default/const17.voa\
	voacapl/itshfbc/antennas/default/isotrope\
	voacapl/itshfbc/antennas/default/swwhip.voa\
	voacapl/itshfbc/antennas/samples/sample.00\
	voacapl/itshfbc/antennas/samples/sample.01\
	voacapl/itshfbc/antennas/samples/sample.02\
	voacapl/itshfbc/antennas/samples/sample.03\
	voacapl/itshfbc/antennas/samples/sample.04\
	voacapl/itshfbc/antennas/samples/sample.05\
	voacapl/itshfbc/antennas/samples/sample.06\
	voacapl/itshfbc/antennas/samples/sample.07\
	voacapl/itshfbc/antennas/samples/sample.08\
	voacapl/itshfbc/antennas/samples/sample.09\
	voacapl/itshfbc/antennas/samples/sample.10\
	voacapl/itshfbc/antennas/samples/sample.11\
	voacapl/itshfbc/antennas/samples/sample.12\
	voacapl/itshfbc/antennas/samples/sample.13\
	voacapl/itshfbc/antennas/samples/sample.14\
	voacapl/itshfbc/antennas/samples/sample.14x\
	voacapl/itshfbc/antennas/samples/sample.21\
	voacapl/itshfbc/antennas/samples/sample.22\
	voacapl/itshfbc/antennas/samples/sample.23\
	voacapl/itshfbc/antennas/samples/sample.24\
	voacapl/itshfbc/antennas/samples/sample.25\
	voacapl/itshfbc/antennas/samples/sample.26\
	voacapl/itshfbc/antennas/samples/sample.27\
	voacapl/itshfbc/antennas/samples/sample.28\
	voacapl/itshfbc/antennas/samples/sample.29\
	voacapl/itshfbc/antennas/samples/sample.30\
	voacapl/itshfbc/antennas/samples/sample.31\
	voacapl/itshfbc/antennas/samples/sample.32\
	voacapl/itshfbc/antennas/samples/sample.34\
	voacapl/itshfbc/antennas/samples/sample.35\
	voacapl/itshfbc/antennas/samples/sample.36\
	voacapl/itshfbc/antennas/samples/sample.37\
	voacapl/itshfbc/antennas/samples/sample.38\
	voacapl/itshfbc/antennas/samples/sample.39\
	voacapl/itshfbc/antennas/samples/sample.41\
	voacapl/itshfbc/antennas/samples/sample.43\
	voacapl/itshfbc/antennas/samples/sample.44\
	voacapl/itshfbc/antennas/samples/sample.45\
	voacapl/itshfbc/antennas/samples/sample.46\
	voacapl/itshfbc/antennas/samples/sample.47\
	voacapl/itshfbc/antennas/samples/sample.48\
	voacapl/itshfbc/antennas/samples/sample.90\
	voacapl/itshfbc/antennas/samples/sample.99\
	voacapl/itshfbc/areadata/default/default.ice\
	voacapl/itshfbc/areadata/default/default.rec\
	voacapl/itshfbc/areadata/default/default.voa\
	voacapl/itshfbc/area_inv/default/default.ice\
	voacapl/itshfbc/area_inv/default/default.voa\
	voacapl/itshfbc/coeffs/coeff01.asc\
	voacapl/itshfbc/coeffs/coeff02.asc\
	voacapl/itshfbc/coeffs/coeff03.asc\
	voacapl/itshfbc/coeffs/coeff04.asc\
	voacapl/itshfbc/coeffs/coeff05.asc\
	voacapl/itshfbc/coeffs/coeff06.asc\
	voacapl/itshfbc/coeffs/coeff07.asc\
	voacapl/itshfbc/coeffs/coeff08.asc\
	voacapl/itshfbc/coeffs/coeff09.asc\
	voacapl/itshfbc/coeffs/coeff10.asc\
	voacapl/itshfbc/coeffs/coeff11.asc\
	voacapl/itshfbc/coeffs/coeff12.asc\
	voacapl/itshfbc/coeffs/fof2CCIR.asc\
	voacapl/itshfbc/coeffs/fof2daly.asc\
	voacapl/itshfbc/coeffs/fof2URSI.asc\
	voacapl/itshfbc/database/cirafp.911\
	voacapl/itshfbc/database/colors.dat\
	voacapl/itshfbc/database/colors.win\
	voacapl/itshfbc/database/north_pole.txt\
	voacapl/itshfbc/database/version.w32\
	voacapl/itshfbc/database/version.win\
	voacapl/itshfbc/database/voacap.def\
	voacapl/itshfbc/database/fof2var.txt\
	voacapl/itshfbc/database/p1240.dat\
	voacapl/itshfbc/geocity/africa.geo\
	voacapl/itshfbc/geocity/caribean.geo\
	voacapl/itshfbc/geocity/ciraf.geo\
	voacapl/itshfbc/geocity/dxcc1.geo\
	voacapl/itshfbc/geocity/europe.geo\
	voacapl/itshfbc/geocity/fareast.geo\
	voacapl/itshfbc/geocity/hflist05082006.geo\
	voacapl/itshfbc/geocity/military.geo\
	voacapl/itshfbc/geocity/namerica.geo\
	voacapl/itshfbc/geocity/ncdxf.geo\
	voacapl/itshfbc/geocity/oceanic.geo\
	voacapl/itshfbc/geocity/other.geo\
	voacapl/itshfbc/geocity/palau.geo\
	voacapl/itshfbc/geocity/samerica.geo\
	voacapl/itshfbc/geocity/westasia.geo\
	voacapl/itshfbc/geocity/wrldwide.geo\
	voacapl/itshfbc/geonatio/africa.geo\
	voacapl/itshfbc/geonatio/caribean.geo\
	voacapl/itshfbc/geonatio/europe.geo\
	voacapl/itshfbc/geonatio/fareast.geo\
	voacapl/itshfbc/geonatio/hf-list.geo\
	voacapl/itshfbc/geonatio/namerica.geo\
	voacapl/itshfbc/geonatio/samerica.geo\
	voacapl/itshfbc/geonatio/westasia.geo\
	voacapl/itshfbc/geostate/alabama.geo \
	voacapl/itshfbc/geostate/alaska.geo \
	voacapl/itshfbc/geostate/arizona.geo \
	voacapl/itshfbc/geostate/arkansas.geo \
	voacapl/itshfbc/geostate/cali_a-l.geo \
	voacapl/itshfbc/geostate/cali_m-z.geo \
	voacapl/itshfbc/geostate/colorado.geo \
	voacapl/itshfbc/geostate/connecti.geo \
	voacapl/itshfbc/geostate/dc.geo \
	voacapl/itshfbc/geostate/delaware.geo \
	voacapl/itshfbc/geostate/flor_a-l.geo \
	voacapl/itshfbc/geostate/flor_m-z.geo \
	voacapl/itshfbc/geostate/georgia.geo \
	voacapl/itshfbc/geostate/hawaii.geo \
	voacapl/itshfbc/geostate/idaho.geo \
	voacapl/itshfbc/geostate/illi_a-l.geo \
	voacapl/itshfbc/geostate/illi_m-z.geo \
	voacapl/itshfbc/geostate/indiana.geo \
	voacapl/itshfbc/geostate/iowa_a-l.geo \
	voacapl/itshfbc/geostate/iowa_m-z.geo \
	voacapl/itshfbc/geostate/kansas.geo \
	voacapl/itshfbc/geostate/kentucky.geo \
	voacapl/itshfbc/geostate/louisian.geo \
	voacapl/itshfbc/geostate/maine.geo \
	voacapl/itshfbc/geostate/maryland.geo \
	voacapl/itshfbc/geostate/massachu.geo \
	voacapl/itshfbc/geostate/michigan.geo \
	voacapl/itshfbc/geostate/minn_a-l.geo \
	voacapl/itshfbc/geostate/minn_m-z.geo \
	voacapl/itshfbc/geostate/mississi.geo \
	voacapl/itshfbc/geostate/mo_a-l.geo \
	voacapl/itshfbc/geostate/mo_m-z.geo \
	voacapl/itshfbc/geostate/montana.geo \
	voacapl/itshfbc/geostate/n_caroli.geo \
	voacapl/itshfbc/geostate/n_dakota.geo \
	voacapl/itshfbc/geostate/nebraska.geo \
	voacapl/itshfbc/geostate/nevada.geo \
	voacapl/itshfbc/geostate/new_hamp.geo \
	voacapl/itshfbc/geostate/new_jers.geo \
	voacapl/itshfbc/geostate/new_mexi.geo \
	voacapl/itshfbc/geostate/ny_a-l.geo \
	voacapl/itshfbc/geostate/ny_m-z.geo \
	voacapl/itshfbc/geostate/ohio_a-l.geo \
	voacapl/itshfbc/geostate/ohio_m-z.geo \
	voacapl/itshfbc/geostate/oklahoma.geo \
	voacapl/itshfbc/geostate/oregon.geo \
	voacapl/itshfbc/geostate/penn_a-l.geo \
	voacapl/itshfbc/geostate/penn_m-z.geo \
	voacapl/itshfbc/geostate/rhode_is.geo \
	voacapl/itshfbc/geostate/s_caroli.geo \
	voacapl/itshfbc/geostate/s_dakota.geo \
	voacapl/itshfbc/geostate/tennesse.geo \
	voacapl/itshfbc/geostate/tx_a-f.geo \
	voacapl/itshfbc/geostate/tx_g-o.geo \
	voacapl/itshfbc/geostate/tx_p-z.geo \
	voacapl/itshfbc/geostate/utah.geo \
	voacapl/itshfbc/geostate/vermont.geo \
	voacapl/itshfbc/geostate/virginia.geo \
	voacapl/itshfbc/geostate/washingt.geo \
	voacapl/itshfbc/geostate/west_va.geo \
	voacapl/itshfbc/geostate/wisconsi.geo \
	voacapl/itshfbc/geostate/wyoming.geo \
	voacapl/itshfbc/run/gain01.dat\
	voacapl/itshfbc/run/gain02.dat\
	voacapl/itshfbc/run/voacapx.dat\
	voacapl/itshfbc/run/voacapg.dat\
	voacapl/itshfbc/run/voaareax.da1\
	voacapl/itshfbc/run/voacapx.out\
	voacapl/itshfbc/run/voacapw.asc\
	voacapl/itshfbc/run/voacap.cir

install-exec-hook:
	sed "s|__PREFIX__|@prefix@|" $(DESTDIR)/$(bindir)/makeitshfbc > makeitshfbc.tmp
	chmod 755 makeitshfbc.tmp
	mv makeitshfbc.tmp $(DESTDIR)/$(bindir)/makeitshfbc

install-data-hook:
	$(DESTDIR)/$(bindir)/coeffbin $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs &&\
	$(DESTDIR)/$(bindir)/coefbinw $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs &&\
	$(DESTDIR)/$(bindir)/fof2bin $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs &&\
	$(DESTDIR)/$(bindir)/fof2binw $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs &&\
	echo "" &&\
	echo "" &&\
	echo "***************************************************" &&\
	echo "Run the command 'makeitshfbc' logged in with " &&\
	echo "your usual username to create the itshfbc directory" &&\
	echo "structure in your home directory." &&\
	echo "***************************************************" &&\
	echo "" &&\
	echo ""

uninstall-hook:
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff01.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff02.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff03.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff04.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff05.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff06.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff07.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff08.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff09.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff10.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff11.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff12.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff01w.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff02w.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff03w.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff04w.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff05w.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff06w.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff07w.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff08w.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff09w.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff10w.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff11w.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/coeff12w.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/fof2dalw.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/fof2daly.bin
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/fof2CCIR.da
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/fof2CCIR.daw
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/fof2URSI.da
	-rm $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs/fof2URSI.daw
	-rmdir $(DESTDIR)/$(datadir)/voacapl/itshfbc/coeffs
