AC_INIT([voacapl], [0.6.4], [jimwatson@mac.com])
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_F77([gfortran])
AC_PROG_LN_S
AC_PROG_RANLIB
AC_CONFIG_FILES([
 	Makefile
	src/modules/Makefile
 	src/hfmufesw/Makefile
 	src/voa_lib/Makefile
 	src/wp10dwin/Makefile
 	src/voacapw/Makefile
	voacapl/itshfbc/coeffs/Makefile
	voacapl/itshfbc/bin/anttyp90/Makefile
])
AC_OUTPUT

