lib_LIBRARIES = libhfmufesw.a
AM_FFLAGS = -w -fno-backslash -ffixed-line-length-none -fno-sign-zero -I ../modules/
libhfmufesw_a_SOURCES =  agauss.f\
	cang.f\
	cmpinv.f\
	coll.f\
	csz1.f\
	ech.f\
	matinv.f\
	mufesgan.f\
	mufesint.f\
	mutual.f \
	onej.f \
	react.f \
	resist.f \
	sim.f \
	sqmult.f \
	zmut.f

