lib_LIBRARIES = libhfmufesw.a
AM_FFLAGS = -w -fno-backslash -ffixed-line-length-none -fno-sign-zero
libhfmufesw_a_SOURCES =  agauss.for\
	cang.for\
	cmpinv.for\
	coll.for\
	csz1.for\
	ech.for\
	matinv.for\
	mufesgan.for\
	mufesint.for\
	mutual.for\
	onej.for\
	react.for\
	resist.for\
	sim.for\
	sqmult.for\
	zmut.for

