bin_PROGRAMS = rec533
AM_FFLAGS = -cpp -w -fno-backslash -ffixed-line-length-none -fno-sign-zero -I ../modules/
rec533_LDADD = ../hfmufesw/libhfmufesw.a\
    ../voa_lib/libvoa.a\
    ../wp10dwin/libwp10dwin.a\
    ../modules/libmodules.a

rec533_SOURCES = rec533w.for \
  rec533.for \
	blkdat.for \
	gettr.for \
	circant.for \
	read_asc.for \
	absorp.for \
	antcalz.for \
	antcalc.for \
	antciraf.for \
	cancel.for \
	runfreqs.for \
	anois1.for \
	batch.for \
	bear.for \
	best3.for \
	bestf.for \
	class.for \
	class1.for \
	contat.for \
	contp.for \
	cords.for \
	curmuf.for \
	dazel1.for \
	dbu252.for \
	decred.for \
	del_abt.for \
	distxy.for \
	evlgog.for \
	evltim.for \
	f777.for \
	fad842.for \
	fop.for \
	ftz.for \
	genfam.for \
	genois1.for \
	geom.for \
	gridxy.for \
	harris.for \
	kormu.for \
	lcount.for \
	luffy.for \
	magfit.for \
	mirror.for \
	monitr.for \
	muf434.for \
	mugfoe.for \
	noisy.for \
	outarea.for\
	outareah.for \
	outbod.for \
	outtop.for \
	fof2var.for \
	parion.for \
	phifun.for \
	pwrdb.for \
	rdciraf.for \
	redmap.for \
	reluf.for \
	sigdis.for \
	snprob.for \
	squeez.for \
	syssy.for \
	timvar.for \
	txpwr.for \
	weight.for \
	winter.for \
	xposit.for \
	xten3.for
