lib_LIBRARIES = libvoa.a
AM_FFLAGS = -w -fno-backslash -ffixed-line-length-none -fno-sign-zero -I ../modules/
libvoa_a_SOURCES =  dazel1.for\
	deg2chr.for\
	doscolr.for\
	icoldos.for\
	col_dos.for\
	wincolr.for\
	chardeg.for\
	lcount.for\
	lenchar.for\
	rblankc.for\
	set_run.for\
	suffix.for\
	pwrcut.for


