bin_PROGRAMS = voacapl
AM_FFLAGS = -w -fno-backslash -ffixed-line-length-none -fno-sign-zero -I ../modules/
voacapl_LDADD = ../hfmufesw/libhfmufesw.a ../voa_lib/libvoa.a  ../wp10dwin/libwp10dwin.a
voacapl_SOURCES = ficepac.hdr \
 	fice_ssn.hdr \
	voa_defs_mod.f \
 	ficearea.hdr \
 	voacapw.F\
 	blkdat.f\
 	cancel.f\
 	voacap.f\
 	gettr.f\
 	circant.f\
 	read_asc.f\
 	setvars.f\
 	areamap.F\
 	antcalc.f\
 	allmodes.f\
 	alosfv.f\
 	anois1.f\
 	babs.f\
 	batch.f\
 	batch_s.f\
 	bendy.f\
 	cngtim.f\
 	convh.f\
 	curmuf.f\
 	dazel.f\
 	decred.f\
 	distxy.f\
 	ef1var.f\
 	esind.f\
 	esmod.f\
 	esreg.f\
 	f2dis.f\
 	f2var.f\
 	fdist.f\
 	findf.f\
 	fixlin.f\
 	flolin.f\
 	fnorml.f\
 	fobby.f\
 	frqcom.f\
 	gain.f\
 	genfam.f\
 	genion.f\
 	genois.f\
 	geom.f\
 	geotim.f\
 	gethp.f\
	getkmf.f\
 	gettop.f\
 	gmloss.f\
 	gphbod.f\
 	gridxy.f\
	harris.f\
 	hfarea.f\
 	hfciraf.f\
 	outciraf.f\
 	hfmufs.f\
 	hfmufs2.f\
 	inmuf.f\
 	ionplt.f\
 	ionset.f\
 	lecden.f\
 	listin.f\
 	lngpat.f\
 	luffy.f\
 	magfin.f\
 	magvar.f\
 	monitr.f\
 	mpath.f\
 	noisy.f\
 	nommuf.f\
 	outall.f\
 	outant.f\
 	outarea.f\
 	outbod.f\
 	outgph.f\
 	oution.f\
 	outlay.f\
 	outlin.f\
 	outmuf.f\
 	outpar.f\
 	out_si.f\
 	outtab.f\
 	outtop.f\
 	pen.f\
 	penang.f\
 	prbmuf.f\
 	pwrdb.f\
 	rdciraf.f\
 	redmap.f\
 	redaily.f\
 	regmod.f\
 	relbil.f\
 	runfreqs.f\
 	sang.f\
 	selmod.f\
 	seltxr.f\
 	serprb.f\
 	setgph.f\
 	setlng.f\
 	setluf.f\
 	setout.f\
 	settxr.f\
 	sigdis.f\
 	squeez.f\
 	syssy.f\
 	tabbod.f\
 	tabs.f\
 	timvar.f\
 	txpwr.f\
 	versy.f\
 	virtim.f\
 	xlimit6.f\
 	xlin.f\
 	zones.f


