bin_PROGRAMS = voacapl
AM_FFLAGS = -cpp -w -fno-backslash -ffixed-line-length-none -fno-sign-zero -I ../modules/
voacapl_LDADD = ../hfmufesw/libhfmufesw.a ../voa_lib/libvoa.a  ../wp10dwin/libwp10dwin.a
voacapl_SOURCES = ficepac.hdr \
 	fice_ssn.hdr \
 	ficearea.hdr \
 	voacapw.for\
 	blkdat.for\
 	cancel.for\
 	voacap.for\
 	gettr.for\
 	circant.for\
 	read_asc.for\
 	setvars.for\
 	areamap.for\
 	antcalc.for\
 	allmodes.for\
 	alosfv.for\
 	anois1.for\
 	babs.for\
 	batch.for\
 	batch_s.for\
 	bendy.for\
 	cngtim.for\
 	convh.for\
 	curmuf.for\
 	dazel.for\
 	decred.for\
 	distxy.for\
 	ef1var.for\
 	esind.for\
 	esmod.for\
 	esreg.for\
 	f2dis.for\
 	f2var.for\
 	fdist.for\
 	findf.for\
 	fixlin.for\
 	flolin.for\
 	fnorml.for\
 	fobby.for\
 	frqcom.for\
 	gain.for\
 	genfam.for\
 	genion.for\
 	genois.for\
 	geom.for\
 	geotim.for\
 	gethp.for\
	getkmf.for\
 	gettop.for\
 	gmloss.for\
 	gphbod.for\
 	gridxy.for\
	harris.for\
 	hfarea.for\
 	hfciraf.for\
 	outciraf.for\
 	hfmufs.for\
 	hfmufs2.for\
 	inmuf.for\
    invcon.for\
 	ionplt.for\
 	ionset.for\
 	lecden.for\
 	listin.for\
 	lngpat.for\
 	luffy.for\
 	magfin.for\
 	magvar.for\
 	monitr.for\
 	mpath.for\
 	noisy.for\
 	nommuf.for\
 	outall.for\
 	outant.for\
 	outarea.for\
 	outbod.for\
 	outgph.for\
 	oution.for\
 	outlay.for\
 	outlin.for\
 	outmuf.for\
 	outpar.for\
 	out_si.for\
 	outtab.for\
 	outtop.for\
 	pen.for\
 	penang.for\
 	prbmuf.for\
 	pwrdb.for\
 	rdciraf.for\
 	redmap.for\
 	redaily.for\
 	regmod.for\
 	relbil.for\
 	runfreqs.for\
 	sang.for\
 	selmod.for\
 	seltxr.for\
 	serprb.for\
 	setgph.for\
 	setlng.for\
 	setluf.for\
 	setout.for\
 	settxr.for\
 	sigdis.for\
 	squeez.for\
 	syssy.for\
 	tabbod.for\
 	tabs.for\
 	timvar.for\
 	txpwr.for\
 	versy.for\
 	virtim.for\
 	xlimit6.for\
 	xlin.for\
 	zones.for
