lib_LIBRARIES = libwp10dwin.a
AM_FFLAGS = -w -fno-backslash -ffixed-line-length-none -fno-sign-zero -I ../modules/
libwp10dwin_a_SOURCES =  antcal.f\
	azmax.f\
	bessel.f\
	antinit2.f\
	ccirgain.f\
	curcal.f\
	gainorm.f\
	gainrel.f\
	len_trim.f\
	antfile.f\
	antmodel.f\
	ioninit.f\
	iongain.f\
	cisi.f\
	dazel0.f\
	logparm.f\
	parabol.f\
	parmprec.f\
	readant.f\
	refcof.f\
	setmaxga.f\
	surfim.f\
	trigfun.f\
	gainterp.f\
	gainterb.f\
	curtain.f\
	pattrn0.f\
	dbltrap.f\
	f2.f\
	invcon.f

