lib_LIBRARIES = libwp10dwin.a
AM_FFLAGS = -w -fno-backslash -ffixed-line-length-none -fno-sign-zero -I ../voacapw/
libwp10dwin_a_SOURCES =  antcal.for\
	azmax.for\
	bessel.for\
	antinit2.for\
	ccirgain.for\
	curcal.for\
	gainorm.for\
	gainrel.for\
	len_trim.for\
	antfile.for\
	antmodel.for\
	ioninit.for\
	iongain.for\
	cisi.for\
	dazel0.for\
	logparm.for\
	parabol.for\
	parmprec.for\
	readant.for\
	refcof.for\
	setmaxga.for\
	surfim.for\
	trigfun.for\
	gainterp.for\
	gainterb.for\
	curtain.for\
	pattrn0.for\
	dbltrap.for\
	f2.for\
	invcon.for

