bin_PROGRAMS = coeffbin\
	coefbinw\
	fof2bin\
	fof2binw

AM_FFLAGS = -w -ffixed-line-length-none

MOSTLYCLEANFILES = \
	coeff01.bin\
	coeff02.bin\
	coeff03.bin\
	coeff04.bin\
	coeff05.bin\
	coeff06.bin\
	coeff07.bin\
	coeff08.bin\
	coeff09.bin\
	coeff10.bin\
	coeff11.bin\
	coeff12.bin\
	coeff01w.bin\
	coeff02w.bin\
	coeff03w.bin\
	coeff04w.bin\
	coeff05w.bin\
	coeff06w.bin\
	coeff07w.bin\
	coeff08w.bin\
	coeff09w.bin\
	coeff10w.bin\
	coeff11w.bin\
	coeff12w.bin\
	fof2dalw.bin\
	fof2daly.bin\
	fof2CCIR.da\
	fof2CCIR.daw\
	fof2URSI.da\
	fof2URSI.daw

coeffbin_SOURCES = coeffbin.f\
	coeff01.asc\
	coeff02.asc\
	coeff03.asc\
	coeff04.asc\
	coeff05.asc\
	coeff06.asc\
	coeff07.asc\
	coeff08.asc\
	coeff09.asc\
	coeff10.asc\
	coeff11.asc\
	coeff12.asc\
	fof2CCIR.asc\
	fof2daly.asc\
	fof2URSI.asc

coefbinw_SOURCES = coefbinw.f\
	coeff01.asc\
	coeff02.asc\
	coeff03.asc\
	coeff04.asc\
	coeff05.asc\
	coeff06.asc\
	coeff07.asc\
	coeff08.asc\
	coeff09.asc\
	coeff10.asc\
	coeff11.asc\
	coeff12.asc\
	fof2CCIR.asc\
	fof2daly.asc\
	fof2URSI.asc

fof2bin_SOURCES = fof2bin.f\
	coeff01.asc\
	coeff02.asc\
	coeff03.asc\
	coeff04.asc\
	coeff05.asc\
	coeff06.asc\
	coeff07.asc\
	coeff08.asc\
	coeff09.asc\
	coeff10.asc\
	coeff11.asc\
	coeff12.asc\
	fof2CCIR.asc\
	fof2daly.asc\
	fof2URSI.asc

fof2binw_SOURCES = fof2binw.f\
	coeff01.asc\
	coeff02.asc\
	coeff03.asc\
	coeff04.asc\
	coeff05.asc\
	coeff06.asc\
	coeff07.asc\
	coeff08.asc\
	coeff09.asc\
	coeff10.asc\
	coeff11.asc\
	coeff12.asc\
	fof2CCIR.asc\
	fof2daly.asc\
	fof2URSI.asc


